--- a/filme.html
+++ b/filme.html
@@ -10,8 +10,7 @@
 
 <body>
     <h1>Coringa: Delírio a Dois</h1>
-
-    <a href="/images/filme.jpg"></a>
+    <img src="/images/filme.jpg" alt="">
 
     <h2>Sinopse</h1>
     <p>
@@ -31,10 +30,11 @@
     <h2>Plataformas Stream</h2>
 
     <ul>
-        <li><a href="https://www.primevideo.com/-/pt_PT/detail/Coringa/0QSV379J8LY7Y6BZTFZJDEP21S">Amazon Prime Video</a></li>
-        <li><a href="https://www.claro.com.br/tv-por-assinatura/programacao/grade/programa/hbo-2/1-436/coringa/1-790332">Claro video</a></li>
-        <li><a href="https://www.adorocinema.com/filmes/filme-278006/">AdoroCinema</a></li>
-        <li><a href="https://www.looke.com.br/landingpage?gad_source=1&gclid=CjwKCAjwuMC2BhA7EiwAmJKRrGWK2s1NztcuxtA5d-g8qyPiE48ErZsauk9qiggm9YAMvcd72sEY3RoCOm8QAvD_BwE">Looke</a></li>
+        <li><a href="https://www.disneyplus.com">Disney+</a></li>
+        <li><a href="https://www.primevideo.com">Amazon Prime Video</a></li>
+        <li><a href="https://www.claro.com.br">Claro video</a></li>
+        <li><a href="https://www.adorocinema.com">AdoroCinema</a></li>
+        <li><a href="https://www.looke.com.br">Looke</a></li>
     </ul>
 </body>
 </html>
