--- a/filme.html
+++ b/filme.html
@@ -12,6 +12,13 @@
     <h1>Coringa: Delírio a Dois</h1>
     <img src="/images/filme.jpg" alt="">
 
+    <h2>MENU</h2>
+    <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="filme.html">Filme</a></li>
+        <li><a href="livro.html">Livro</a></li>
+        <li><a href="musica.html">Música</a></li>
+    </ul>
     <h2>Sinopse</h1>
     <p>
         Em Coringa 2, acompanhamos a sequência do longa sobre <em>Arthur Fleck (Joaquin Phoenix)</em>, que trabalhava como palhaço para uma agência de talentos e precisou lidar desde sempre com seus problemas mentais. Vindo de uma origem familiar complicada, sua personalidade nada convencional o fez ser demitido do emprego, e, numa reação a essa e tantas outras infelicidades em sua vida, ele assumiu uma postura violenta - e se tornou o Coringa. A continuação se passa depois dos acontecimentos do filme de 2019, após ser iniciado um movimento popular contra a elite de <em>Gotham City</em>, revolução esta, que teve o Coringa como seu maior representante.
