--- a/livro.html
+++ b/livro.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Coringa: Delírio a Dois</title>
+        <title>Lady Gaga - Livro</title>
         <link rel="stylesheet" href="css/estilo.css">
 </head>
 
@@ -12,6 +12,14 @@
     <h1>Lady Gaga só para baixinhos</h1>
     <img src="/images/livro.jpg" alt="">
 
+    <h2>MENU</h2>
+    <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="filme.html">Filme</a></li>
+        <li><a href="livro.html">Livro</a></li>
+        <li><a href="musica.html">Música</a></li>
+    </ul>
+    
     <p>
         Os fãs (e fãs mirins) de <em>Lady Gaga</em> podem comemorar! A cantora ganhará um livro todo ilustrado que trará os registros mais marcantes de sua vida e carreira. <em>“Lady Gaga: A Little Golden Book Biography”</em> é uma história escrita pelo autor <em>Michael Joosten</em> e ilustrado por <em>Laura Catrinella</em>, que é voltada para crianças em fase de pré-escola. É claro, porém, que os little monsters já vão garantir uma cópia para sua coleção de itens da pop star…
     </p>
