--- a/musica.html
+++ b/musica.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Coringa: Delírio a Dois</title>
+        <title>Lady Gaga - Música</title>
         <link rel="stylesheet" href="css/estilo.css">
 </head>
 
@@ -12,6 +12,14 @@
     <h1>Chromatica</h1>
     <img src="/images/musica.jpg" alt="">
 
+    <h2>MENU</h2>
+    <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="filme.html">Filme</a></li>
+        <li><a href="livro.html">Livro</a></li>
+        <li><a href="musica.html">Música</a></li>
+    </ul>
+    
     <h2>Influências para a Criação do Álbum</h2>
     <p>
         Musicalmente, o álbum traz influências do dance-pop, electropop, synthpop, house music, disco music, deep house e eurodance, vindos da década de 1990. A capacidade da cantora de trazer ritmos e sensações nostálgicas para o álbum, faz com que ele possa ser chamado de "inovador". "Eu e BloodPop fizemos todas as batidas no computador." afirmou a cantora em uma entrevista para a Apple Music. Lady Gaga trabalhou com um time de produtores criativos e abertos a qualquer ideia, que trouxeram sugestões e criações também nostálgicas.
