--- a/index.html
+++ b/index.html
@@ -29,5 +29,14 @@
     <a href="/filme.html"><img src="/images/filme.jpg" alt=""></a>
     <a href="/livro.html"><img src="/images/livro.jpg" alt=""></a>
     <a href="/musica.html"><img src="/images/musica.jpg" alt=""></a>
+
+    <footer>
+        <p>Contato: <a href="mailto:contato@ladygaga.com">contato@ladygaga.com</a></p>
+        <div>
+            <a href="https://www.instagram.com/ladygaga"><img src="images/instagram.png" alt="Instagram"></a>
+            <a href="https://www.facebook.com/ladygaga"><img src="images/facebook.png" alt="Facebook"></a>
+            <a href="https://www.youtube.com/user/ladygagaofficial"><img src="images/youtube.png" alt="YouTube"></a>
+        </div>
+    </footer>
 </body>
 </html>
