--- a/filme.html
+++ b/filme.html
@@ -43,5 +43,14 @@
         <li><a href="https://www.adorocinema.com">AdoroCinema</a></li>
         <li><a href="https://www.looke.com.br">Looke</a></li>
     </ul>
+    
+    <footer>
+        <p>Contato: <a href="mailto:contato@ladygaga.com">contato@ladygaga.com</a></p>
+        <div>
+            <a href="https://www.instagram.com/ladygaga"><img src="images/instagram.png" alt="Instagram"></a>
+            <a href="https://www.facebook.com/ladygaga"><img src="images/facebook.png" alt="Facebook"></a>
+            <a href="https://www.youtube.com/user/ladygagaofficial"><img src="images/youtube.png" alt="YouTube"></a>
+        </div>
+    </footer>
 </body>
 </html>
