--- a/filme.html
+++ b/filme.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <img src="/images/logo.png" alt="">
+    <hr>
+    <hr>
     <img src="/images/filme.jpg" alt="">
     <h1>Coringa: Delírio a Dois</h1>
 
@@ -23,8 +26,10 @@
     <p>
         Em Coringa 2, acompanhamos a sequência do longa sobre <em>Arthur Fleck (Joaquin Phoenix)</em>, que trabalhava como palhaço para uma agência de talentos e precisou lidar desde sempre com seus problemas mentais. Vindo de uma origem familiar complicada, sua personalidade nada convencional o fez ser demitido do emprego, e, numa reação a essa e tantas outras infelicidades em sua vida, ele assumiu uma postura violenta - e se tornou o Coringa. A continuação se passa depois dos acontecimentos do filme de 2019, após ser iniciado um movimento popular contra a elite de <em>Gotham City</em>, revolução esta, que teve o Coringa como seu maior representante.
     </p>
+
+    <h3>Gênero: <em>Ação, Drama, Romance</em></h3>
     <p>
-        Gênero: <em>Ação, Drama, Romance</em>
+        
         <br>
         Direção: <strong>Todd Phillips</strong> | Roteiro <strong>Todd Phillips, Scott Silver</strong>
         <br>
@@ -47,9 +52,9 @@
     <footer>
         <p>Contato: <a href="mailto:contato@ladygaga.com">contato@ladygaga.com</a></p>
         <div>
-            <a href="https://www.instagram.com/ladygaga"><img src="images/instagram.png" alt="Instagram"></a>
-            <a href="https://www.facebook.com/ladygaga"><img src="images/facebook.png" alt="Facebook"></a>
-            <a href="https://www.youtube.com/user/ladygagaofficial"><img src="images/youtube.png" alt="YouTube"></a>
+            <a href="https://www.instagram.com/ladygaga"><img src="images/instagram.png" width="100" alt="Instagram"></a>
+            <a href="https://www.facebook.com/ladygaga"><img src="images/facebook.png" width="100" alt="Facebook"></a>
+            <a href="https://www.youtube.com/user/ladygagaofficial"><img src="images/youtube.png" width="100" alt="YouTube"></a>
         </div>
     </footer>
 </body>
