--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    
+    <img src="/images/logo.png" alt="">
+    <hr>
+    <hr>
     <img src="/images/ladygaga.png" alt="">
     <h1>Lady Gaga</h1>
 
@@ -33,9 +35,9 @@
     <footer>
         <p>Contato: <a href="mailto:contato@ladygaga.com">contato@ladygaga.com</a></p>
         <div>
-            <a href="https://www.instagram.com/ladygaga"><img src="images/instagram.png" alt="Instagram"></a>
-            <a href="https://www.facebook.com/ladygaga"><img src="images/facebook.png" alt="Facebook"></a>
-            <a href="https://www.youtube.com/user/ladygagaofficial"><img src="images/youtube.png" alt="YouTube"></a>
+            <a href="https://www.instagram.com/ladygaga"><img src="images/instagram.png" width="100" alt="Instagram"></a>
+            <a href="https://www.facebook.com/ladygaga"><img src="images/facebook.png" width="100" alt="Facebook"></a>
+            <a href="https://www.youtube.com/user/ladygagaofficial"><img src="images/youtube.png" width="100" alt="YouTube"></a>
         </div>
     </footer>
 </body>
