--- a/musica.html
+++ b/musica.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <img src="/images/logo.png" alt="">
+    <hr>
+    <hr>
     <img src="/images/musica.jpg" alt="">
     <h1>Chromatica</h1>
 
@@ -47,9 +50,9 @@
     <footer>
         <p>Contato: <a href="mailto:contato@ladygaga.com">contato@ladygaga.com</a></p>
         <div>
-            <a href="https://www.instagram.com/ladygaga"><img src="images/instagram.png" alt="Instagram"></a>
-            <a href="https://www.facebook.com/ladygaga"><img src="images/facebook.png" alt="Facebook"></a>
-            <a href="https://www.youtube.com/user/ladygagaofficial"><img src="images/youtube.png" alt="YouTube"></a>
+            <a href="https://www.instagram.com/ladygaga"><img src="images/instagram.png" width="100" alt="Instagram"></a>
+            <a href="https://www.facebook.com/ladygaga"><img src="images/facebook.png" width="100" alt="Facebook"></a>
+            <a href="https://www.youtube.com/user/ladygagaofficial"><img src="images/youtube.png" width="100" alt="YouTube"></a>
         </div>
     </footer>
     
