--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
 </head>
 
 <body>
-    <img src="/images/logo.png" alt="">
+    <img src="/images/logo.png" alt="Logo Lady Gaga">
     <hr>
     <hr>
-    <img src="/images/ladygaga.png" alt="">
-    <h1>Lady Gaga</h1>
-
+    
     <h2>MENU</h2>
     <ul>
         <li><a href="index.html">Início</a></li>
@@ -22,16 +20,25 @@
         <li><a href="livro.html">Livro</a></li>
         <li><a href="musica.html">Música</a></li>
     </ul>
-
+    <br>
+    <hr>
+    <hr>
+    <img src="/images/ladygaga.png" alt="">
+    <h1>Lady Gaga</h1>
     <p>
         <em>Stefani Joanne Angelina Germanotta</em> (Nova Iorque, 28 de março de 1986), mais conhecida pelo nome artístico <em>Lady Gaga</em>, é uma cantora, compositora, instrumentista, atriz, produtora musical e empresária estadunidense.Gaga começou a apresentar-se no cenário musical de rock no Lower East Side em 2003, e mais tarde matriculou-se na Tisch School of Arts da Universidade de Nova Iorque. No fim de 2007, assinou um contrato com a Streamline Records, um selo da editora discográfica Interscope Records. Durante o seu início na Interscope, trabalhou como compositora para artistas e capturou a atenção do produtor Akon, que reconheceu as suas habilidades vocais e contratou-a para a sua própria gravadora, a <em>Kon Live Distribution</em>. Ela ganhou proeminência como uma artista após o lançamento do seu álbum de estúdio de estreia, intitulado The Fame, em 2008. O disco foi um sucesso a nível crítico e comercial. Seus singles "Just Dance" e "Poker Face" tornaram-se sucessos internacionais e atingiram o topo da parada estadunidense <em>Billboard Hot 100</em>. O álbum, mais tarde, foi relançado junto com extended play (EP) The Fame Monster, que contém os êxitos internacionais "Bad Romance", "Telephone" e "Alejandro".
     </p>
-
+    <br>
+    <hr>
+    <hr>
     <h2>Lançamentos</h2>
-    <a href="/filme.html"><img src="/images/filme.jpg" alt=""></a>
-    <a href="/livro.html"><img src="/images/livro.jpg" alt=""></a>
-    <a href="/musica.html"><img src="/images/musica.jpg" alt=""></a>
+    <a href="/filme.html"><img src="/images/filme.jpg" width="300" alt=""></a>
+    <a href="/livro.html"><img src="/images/livro.jpg" width="253" alt=""></a>
+    <a href="/musica.html"><img src="/images/musica.jpg" width="300" alt=""></a>
 
+    <br>
+    <hr>
+    <hr>
     <footer>
         <p>Contato: <a href="mailto:contato@ladygaga.com">contato@ladygaga.com</a></p>
         <div>
