--- a/livro.html
+++ b/livro.html
@@ -9,12 +9,10 @@
 </head>
 
 <body>
-    <img src="/images/logo.png" alt="">
+    <img src="/images/logo.png" alt="Logo Lady Gaga">
     <hr>
     <hr>
-    <img src="/images/livro.jpg" alt="">
-    <h1>Lady Gaga só para baixinhos</h1>
-
+    
     <h2>MENU</h2>
     <ul>
         <li><a href="index.html">Início</a></li>
@@ -22,6 +20,11 @@
         <li><a href="livro.html">Livro</a></li>
         <li><a href="musica.html">Música</a></li>
     </ul>
+    <br>
+    <hr>
+    <hr>
+    <img src="/images/livro.jpg" alt="">
+    <h1>Lady Gaga só para baixinhos</h1>
     
     <p>
         Os fãs (e fãs mirins) de <em>Lady Gaga</em> podem comemorar! A cantora ganhará um livro todo ilustrado que trará os registros mais marcantes de sua vida e carreira. <em>“Lady Gaga: A Little Golden Book Biography”</em> é uma história escrita pelo autor <em>Michael Joosten</em> e ilustrado por <em>Laura Catrinella</em>, que é voltada para crianças em fase de pré-escola. É claro, porém, que os little monsters já vão garantir uma cópia para sua coleção de itens da pop star…
@@ -37,7 +40,9 @@
     <p>
         Um dos propósitos dos artistas envolvidos na produção do livro é estimular que as crianças sonhem grande, além de introduzi-las à leitura do gênero de não-ficção.
     </p>
-
+    <br>
+    <hr>
+    <hr>
     <h2>Índice</h2>
     <p>
         <ol>
@@ -61,9 +66,14 @@
             </ol>
         </ol>
     </p>
+    <br>
+    <hr>
+    <hr>
     <p><strong>Preço: $29.99</strong></p>
     <a href="https://www.amazon.com">Compre Agora</a>
-
+    <br>
+    <hr>
+    <hr>
     <footer>
         <p>Contato: <a href="mailto:contato@ladygaga.com">contato@ladygaga.com</a></p>
         <div>
@@ -72,7 +82,6 @@
             <a href="https://www.youtube.com/user/ladygagaofficial"><img src="images/youtube.png" width="100" alt="YouTube"></a>
         </div>
     </footer>
-
 
 </body>
 </html>
