--- a/filme.html
+++ b/filme.html
@@ -9,12 +9,10 @@
 </head>
 
 <body>
-    <img src="/images/logo.png" alt="">
+    <img src="/images/logo.png" alt="Logo Lady Gaga">
     <hr>
     <hr>
-    <img src="/images/filme.jpg" alt="">
-    <h1>Coringa: Delírio a Dois</h1>
-
+    
     <h2>MENU</h2>
     <ul>
         <li><a href="index.html">Início</a></li>
@@ -22,6 +20,13 @@
         <li><a href="livro.html">Livro</a></li>
         <li><a href="musica.html">Música</a></li>
     </ul>
+
+    <br>
+    <hr>
+    <hr>
+    <img src="/images/filme.jpg" alt="">
+    <h1>Coringa: Delírio a Dois</h1>
+
     <h2>Sinopse</h1>
     <p>
         Em Coringa 2, acompanhamos a sequência do longa sobre <em>Arthur Fleck (Joaquin Phoenix)</em>, que trabalhava como palhaço para uma agência de talentos e precisou lidar desde sempre com seus problemas mentais. Vindo de uma origem familiar complicada, sua personalidade nada convencional o fez ser demitido do emprego, e, numa reação a essa e tantas outras infelicidades em sua vida, ele assumiu uma postura violenta - e se tornou o Coringa. A continuação se passa depois dos acontecimentos do filme de 2019, após ser iniciado um movimento popular contra a elite de <em>Gotham City</em>, revolução esta, que teve o Coringa como seu maior representante.
@@ -37,8 +42,12 @@
         <br>
         Título original <strong>Joker: Folie à Deux</strong>
     </p>
+    <hr>
+    <hr>
     <h2>Trailer</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/sHG2sAi2R-s?si=a0-Yv5dLX4DAZFmo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <hr>
+    <hr>
     <h2>Plataformas Stream</h2>
 
     <ul>
@@ -48,7 +57,8 @@
         <li><a href="https://www.adorocinema.com">AdoroCinema</a></li>
         <li><a href="https://www.looke.com.br">Looke</a></li>
     </ul>
-    
+    <hr>
+    <hr>    
     <footer>
         <p>Contato: <a href="mailto:contato@ladygaga.com">contato@ladygaga.com</a></p>
         <div>
