--- a/livro.html
+++ b/livro.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <img src="/images/logo.png" alt="Logo Lady Gaga">
+    <a href="index.html"><img src="images/logo.png" alt="Logo Lady Gaga"></a>
     <hr>
     <hr>
     
@@ -34,7 +34,7 @@
     </p>
 
     <p>
-        Gênero:<strong>Não ficção; biografia; literatura Infantil</strong>
+        <h2><strong>Gênero:Não ficção; biografia; literatura Infantil</strong></h2>
         
     </p>
     <p>
