--- a/musica.html
+++ b/musica.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <img src="/images/logo.png" alt="Logo Lady Gaga">
+    <a href="index.html"><img src="images/logo.png" alt="Logo Lady Gaga"></a>
     <hr>
     <hr>
     
@@ -28,10 +28,10 @@
 
     <h2>Influências para a Criação do Álbum</h2>
     <p>
-        Musicalmente, o álbum traz influências do dance-pop, electropop, synthpop, house music, disco music, deep house e eurodance, vindos da década de 1990. A capacidade da cantora de trazer ritmos e sensações nostálgicas para o álbum, faz com que ele possa ser chamado de "inovador". "Eu e BloodPop fizemos todas as batidas no computador." afirmou a cantora em uma entrevista para a Apple Music. Lady Gaga trabalhou com um time de produtores criativos e abertos a qualquer ideia, que trouxeram sugestões e criações também nostálgicas.
+        Musicalmente, o álbum traz influências do <em>dance-pop, electropop, synthpop, house music, disco music, deep house e eurodance</em>, vindos da década de 1990. A capacidade da cantora de trazer ritmos e sensações nostálgicas para o álbum, faz com que ele possa ser chamado de "inovador". "Eu e BloodPop fizemos todas as batidas no computador." afirmou a cantora em uma entrevista para a <em>Apple Music</em>. <em>Lady Gaga</em> trabalhou com um time de produtores criativos e abertos a qualquer ideia, que trouxeram sugestões e criações também nostálgicas.
     </p>
     <p>
-        O processo criativo do álbum Chromatica foi durante um grande momento de depressão, tristeza e ansiedade na vida de Lady Gaga por vários motivos, o que influenciou na direção e letras do disco. Em uma conversa com BloodPop concedida ao Gaga Radio, Lady Gaga afirmou: "E, eu sinto que este álbum não foi um acidente, mas meio que só aconteceu. Porque lembro de você vir na minha casa e falar tipo: 'Vamos lá embaixo, vamos criar algumas músicas', e eu super irritada o tempo todo, porque estava passando por umas coisas ruins na minha vida. E acho que você deve ter percebido em mim uma habilidade de expressar isso, sabe, a minha depressão, através da música.". E BloodPop, produtor responsável pela criação de várias músicas do álbum disse: "Você (Gaga) praticamente começava a compor essas canções incoscientemente, antes mesmo de entrar no estúdio. Você começava a compor na mesa de produção.
+        O processo criativo do álbum <em>Chromatica</em> foi durante um grande momento de depressão, tristeza e ansiedade na vida de Lady Gaga por vários motivos, o que influenciou na direção e letras do disco. Em uma conversa com BloodPop concedida ao Gaga Radio, Lady Gaga afirmou: "E, eu sinto que este álbum não foi um acidente, mas meio que só aconteceu. Porque lembro de você vir na minha casa e falar tipo: 'Vamos lá embaixo, vamos criar algumas músicas', e eu super irritada o tempo todo, porque estava passando por umas coisas ruins na minha vida. E acho que você deve ter percebido em mim uma habilidade de expressar isso, sabe, a minha depressão, através da música.". E BloodPop, produtor responsável pela criação de várias músicas do álbum disse: "Você (Gaga) praticamente começava a compor essas canções incoscientemente, antes mesmo de entrar no estúdio. Você começava a compor na mesa de produção.
     </p>
     <br>
     <hr>
