--- a/filme.html
+++ b/filme.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <img src="/images/logo.png" alt="Logo Lady Gaga">
+    <a href="index.html"><img src="images/logo.png" alt="Logo Lady Gaga"></a>
     <hr>
     <hr>
     
